# learn_fast_api

./: .gitignore  README.md  main.py  pyproject.toml
src/: .env  config.py  main.py
src/books/: books_data.py  models.py  router.py  schemas.py
src/db/: main.py
